# slg_

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
seloger/: __init__.py  aclient.py  ascraper.py  cli.py  client.py  config.py  detail.py  enums.py  exceptions.py  export.py  geocoding.py  models.py  parser.py  proxy.py  query.py  scraper.py
tests/: test_async.py  test_detail.py  test_export.py  test_models.py  test_parser.py  test_proxy.py  test_query.py
